--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "standard"
   },
   "dependencies": {
     "exec-stream": "^0.1.0"
